--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "express": "^4.19.2",
+    "desafio12-movie-ratings": "file:",
+    "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "knex": "^3.1.0",
     "sqlite": "^5.1.1",
